crates/math-core/tests/snapshots/conversion_test__phantom.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sqrt{\\phantom{x}y}"
---
<math>
    <msqrt>
        <mrow>
            <mphantom>
                <mi>x</mi>
            </mphantom>
            <mi>y</mi>
        </mrow>
    </msqrt>
</math>
