crates/math-core/tests/snapshots/conversion_test__pilcrow_and_section.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\P\\S\\sect\\text{\\P\\S\\sect}"
---
<math>
    <mi>¶</mi>
    <mi>§</mi>
    <mi>§</mi>
    <mtext>¶§§</mtext>
</math>
