crates/math-core/tests/snapshots/conversion_test__plus_after_bigl.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\bigl)+ x"
---
<math>
    <mo minsize="1.2em" maxsize="1.2em">)</mo>
    <mo lspace="0" rspace="0">+</mo>
    <mi>x</mi>
</math>
