crates/math-core/tests/snapshots/conversion_test__plus_after_bigr.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\bigr(+ x"
---
<math>
    <mo minsize="1.2em" maxsize="1.2em">(</mo>
    <mo>+</mo>
    <mi>x</mi>
</math>
