crates/math-core/tests/snapshots/conversion_test__plus_after_closing_paren.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: (x)+x
---
<math>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mo stretchy="false">)</mo>
    <mo>+</mo>
    <mi>x</mi>
</math>
