crates/math-core/tests/snapshots/conversion_test__plus_after_equal_subscript.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: x =_+4
---
<math>
    <mi>x</mi>
    <msub>
        <mo>=</mo>
        <mo>+</mo>
    </msub>
    <mn>4</mn>
</math>
