crates/math-core/tests/snapshots/conversion_test__plus_after_equal_with_space.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x =\\, +4"
---
<math>
    <mi>x</mi>
    <mo>=</mo>
    <mspace width="0.16666667em"/>
    <mo lspace="0" rspace="0">+</mo>
    <mn>4</mn>
</math>
